--- a/varyunya/varyunya_death_counter.html
+++ b/varyunya/varyunya_death_counter.html
@@ -1,16 +1,9 @@
 <html>
   <head>
+    <link rel="stylesheet" href="varyunya.css">
     <style type="text/css">
-        @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
         body {
             font-size: 53px;
-            font-family: 'Bebas Neue', cursive;
-            color: #FFFFFF;
-            text-shadow:
-            -2px -2px 0 #000,  
-            2px -2px 0 #000,
-            -2px 2px 0 #000,
-            2px 2px 0 #000;
         }
     </style>
     <script lang="javascript">
