--- a/varyunya/varyunya_clock_24h.html
+++ b/varyunya/varyunya_clock_24h.html
@@ -3,28 +3,11 @@
     <p class="time">&nbsp;{{time}}</p>
     </p>
 </div>
+<link rel="stylesheet" href="varyunya.css">
 <style type="text/css">
-    @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
-
-    html,
-    body {
-        height: 100%;
-    }
-
-    p {
-        margin: 0;
-        padding: 0;
-    }
-
+    body,
     #clock {
         font-size: 26px;
-        font-family: 'Bebas Neue', cursive;
-        color: #FFFFFF;
-        text-shadow:
-            -2px -2px 0 #000,
-            2px -2px 0 #000,
-            -2px 2px 0 #000,
-            2px 2px 0 #000;
     }
 </style>
 <script>
