Modified title bar text to nowrap

--- a/whispurraudio/WhispurrMacOS/gameWindow.html
+++ b/whispurraudio/WhispurrMacOS/gameWindow.html
@@ -16,7 +16,7 @@
                 </div>
                 <div class="titlebar-header-lines">‏</div>
                 <h1 class="titlebar-header">
-                    <span class="gameTitle"></span>
+                    <span class="gameTitle">Game</span>
                 </h1>
                 <div class="titlebar-header-lines">‏</div>
                 <div class="control-box zoom-box">
@@ -34,6 +34,6 @@
             </div>
         </div>
 
-        <script src="js/platinum.js"></script>
+        <!-- <script src="js/platinum.js"></script> -->
     </body>
 </html>
