Updated to add modular color themes

--- a/whispurraudio/WhispurrMacOS/chatbox.html
+++ b/whispurraudio/WhispurrMacOS/chatbox.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="stylesheet" href="css/platinum_modified.css" />
-        <!-- <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+        <link rel="stylesheet" href="css/platinum.css" />
+        <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script> -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
     </head>
     <body>
             <div class="window">
@@ -118,18 +118,9 @@
                             <p></p>
                         </li>
                     </ul>
-                    <button class="command_button boot-button">Close</button>
+                    <button class="command_button">Close</button>
                 </div>
             </div>
-        <div
-            id="about"
-            class="content resizable draggable-window"
-            data-window-icon="img/about.png"
-            data-window-name="About"
-        >
-            <h1 class="titlebar"><span>About</span></h1>
-        </div>
-
         <script src="js/platinum.js"></script>
     </body>
 </html>
