--- a/whispurraudio/WhispurrMacOS/index.html
+++ b/whispurraudio/WhispurrMacOS/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <title>Mac OS 8.1</title>
         <link rel="shortcut icon" href="img/favicon.ico" />
-        <link rel="stylesheet" href="css/platinum.css" />
+        <link rel="stylesheet" href="css/platinum.css.bak" />
         <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
         <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
