latest whistwitch update

--- a/whispurraudio/WhisTwitch/index.html
+++ b/whispurraudio/WhisTwitch/index.html
@@ -1,22 +1,251 @@
 <html>
-    <style>
-        .gradient-background {
-            background: linear-gradient(315deg, #2f23ac, #7d35a5, #e54c9c);
-            background-size: 180% 180%;
-            animation: gradient-animation 18s ease infinite;
-        }
+    <head>
+        <script src="js/whistwitch.js"></script>
+        <link rel="stylesheet" href="css/whistwitch.css" />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/blueimp-md5/2.19.0/js/md5.js"></script>
+    </head>
+    <body>
+        <div class="parent">
+            <div class="gridAreaBG">
+                <div class="gradient-background"></div>
+            </div>
+            <div class="gridAreaOverlay snow">
+                <svg
+                    viewBox="0 0 1920 1080"
+                    xmlns="http://www.w3.org/2000/svg"
+                    version="1.1"
+                >
+                    <defs>
+                        <!-- Filter declaration -->
+                        <filter
+                            id="BoxOutlineFilter"
+                            filterUnits="userSpaceOnUse"
+                            x="0"
+                            y="0"
+                            width="1920"
+                            height="1080"
+                        >
+                            <!-- offsetBlur -->
+                            <feGaussianBlur
+                                in="SourceAlpha"
+                                stdDeviation="8"
+                                result="blur"
+                            />
 
-        @keyframes gradient-animation {
-            0% {
-                background-position: 0% 50%;
-            }
-            50% {
-                background-position: 100% 50%;
-            }
-            100% {
-                background-position: 0% 50%;
-            }
-        }
-    </style>
-    <body class="gradient-background"></body>
+                            <!-- litPaint -->
+                            <feSpecularLighting
+                                in="blur"
+                                surfaceScale="10"
+                                specularConstant="1"
+                                specularExponent="1"
+                                lighting-color="#ffffff"
+                                result="specOut"
+                            >
+                                <fePointLight x="-1000" y="-1000" z="1000" />
+                            </feSpecularLighting>
+                            <feComposite
+                                in="specOut"
+                                in2="SourceAlpha"
+                                operator="in"
+                                result="specOut"
+                            />
+                            <feComposite
+                                in="SourceGraphic"
+                                in2="specOut"
+                                operator="arithmetic"
+                                k1="0"
+                                k2="1"
+                                k3="1"
+                                k4="0"
+                                result="litPaint"
+                            />
+
+                            <feDropShadow
+                                dx="0"
+                                dy="0"
+                                stdDeviation="5"
+                                flood-opacity="0.75"
+                                flood-color="#3B3C98"
+                                result="dropShadow"
+                            />
+
+                            <!-- merge offsetBlur + litPaint -->
+                            <feMerge>
+                                <feMergeNode in="litPaint" />
+                                <feMergeNode in="dropShadow" />
+                            </feMerge>
+                        </filter>
+                    </defs>
+
+                    <!-- Graphic elements -->
+                    <g filter="url(#BoxOutlineFilter)">
+                        <path
+                            class="boxOutline"
+                            d="M1462,866H246c-19.85,0-36-16.15-36-36c0-6.62-5.38-12-12-12H0v-24h198c19.85,0,36,16.15,36,36
+                  c0,6.62,5.38,12,12,12h1216c19.85,0,36-16.15,36-36V238c0-6.39-5.61-12-12-12c-19.85,0-36-16.15-36-36V0h24v190
+                  c0,6.39,5.61,12,12,12c19.85,0,36,16.15,36,36v568C1522,839.08,1495.08,866,1462,866z"
+                        />
+                        <path
+                            class="boxOutline"
+                            d="M1920,682h-315.91c-32.03,0-58.09-25.84-58.09-57.6V259.6c0-31.76,26.06-57.6,58.09-57.6H1920v24h-315.91
+	c-18.8,0-34.09,15.07-34.09,33.6v364.8c0,18.53,15.29,33.6,34.09,33.6H1920V682z"
+                        />
+                        <g
+                            id="Fill_00000165933788593770885490000003400979893000528550_"
+                        >
+                            <g>
+                                <g
+                                    id="audio_00000012435633938589479670000008997737186634552492_"
+                                >
+                                    <path
+                                        class="boxOutline"
+                                        d="M1557.81,104.33h23.12v71.62h-23.12v-8.67c-6.26,9.63-15.26,11.08-21.2,11.08
+                    c-10.28,0-18.95-2.57-26.82-10.92c-7.55-8.03-10.44-17.34-10.44-26.82c0-12.04,4.5-22.32,11.08-28.91
+                    c6.26-6.26,14.93-9.8,24.89-9.8c6.1,0,15.9,1.45,22.48,10.44V104.33z M1528.42,126.97c-2.41,2.41-5.3,6.58-5.3,13.01
+                    s2.73,10.6,4.82,12.85c3.21,3.37,8.19,5.62,13.65,5.62c4.66,0,8.99-1.93,12.04-4.98c3.05-2.89,5.62-7.39,5.62-13.49
+                    c0-5.14-1.93-9.96-5.3-13.17c-3.53-3.37-8.67-4.98-12.85-4.98C1536.13,121.84,1531.48,123.92,1528.42,126.97z"
+                                    />
+                                    <path
+                                        class="boxOutline"
+                                        d="M1618.03,104.33v39.5c0,3.21,0.32,8.19,4.01,11.56c1.61,1.45,4.5,3.37,9.63,3.37c4.34,0,7.71-1.45,9.8-3.37
+                    c3.37-3.21,3.85-8.03,3.85-11.56v-39.5h23.12v41.75c0,8.19-0.8,15.9-8.03,22.96c-8.19,8.03-20.23,9.31-28.75,9.31
+                    c-8.83,0-20.72-1.28-28.91-9.31c-6.58-6.42-7.87-13.65-7.87-21.52v-43.2H1618.03z"
+                                    />
+                                    <path
+                                        class="boxOutline"
+                                        d="M1758.06,98.03c-5.35,5.35-11.56,7.84-19.56,7.84c-0.15,0-0.29-0.01-0.44-0.01v6.5
+                    c-5.78-7.87-14.45-10.44-22.32-10.44c-9.8,0-18.63,3.69-24.89,9.63c-6.91,6.58-11.24,16.38-11.24,28.26
+                    c0,11.08,3.85,21.36,11.24,28.75c6.26,6.42,13.97,9.8,24.57,9.8c12.69,0,19.11-5.94,22.64-11.08v8.67h23.12V94.39
+                    C1760.25,95.66,1759.21,96.87,1758.06,98.03z M1734.2,153.15c-3.69,3.53-8.83,5.3-13.17,5.3c-4.01,0-8.51-1.61-12.04-4.98
+                    c-3.37-3.21-5.62-7.87-5.62-13.17c0-5.78,2.25-10.44,5.62-13.65c3.69-3.53,7.71-4.82,12.37-4.82c4.98,0,9.31,1.45,13.01,5.3
+                    c2.73,2.89,5.14,7.07,5.14,13.17C1739.5,146.24,1736.93,150.58,1734.2,153.15z"
+                                    />
+                                    <path
+                                        class="boxOutline"
+                                        d="M1791.23,105.87c-5.66,0-10.48-0.81-14.54-2.45v72.54h23.12V105.1
+                    C1797.17,105.61,1794.31,105.87,1791.23,105.87z"
+                                    />
+                                    <path
+                                        class="boxOutline"
+                                        d="M1891.98,123.02c2.88-3.41,5.07-28.63,0.68-31.46c-4.25-1.99-21.85,11.21-23.63,12.56
+                    c-4.5-1.38-9.56-2.2-15.11-2.2c-5.55,0-10.61,0.82-15.11,2.2c-1.79-1.35-19.38-14.55-23.63-12.56
+                    c-4.39,2.82-2.2,28.05,0.69,31.46c-2.69,5.49-4.02,11.52-4.02,17.12c0,9.15,3.53,19.43,10.76,26.66
+                    c6.42,6.42,17.34,11.56,31.31,11.56c13.97,0,24.89-5.14,31.31-11.56c7.23-7.23,10.76-17.5,10.76-26.66
+                    C1896,134.54,1894.67,128.51,1891.98,123.02z M1891,94.11c2.17,0,1.57,13.86,0.78,18.03c-0.78,4.18-1.51,4.94-3.03,4.94
+                    c-0.17,0-0.3,0-0.42-0.01c-0.38-0.51-0.78-1.01-1.19-1.5c0.25-1.1,0.73-2.67,0.45-2.81c-0.37-0.19-1.37,0.26-2.3,0.77
+                    c-0.01-0.01-0.03-0.03-0.04-0.04c-0.25-0.25-0.52-0.49-0.78-0.74c0.76-1.5,1.47-3.3,0.39-3.27c-0.81,0.02-1.65,0.76-2.37,1.56
+                    c-0.32-0.26-0.66-0.51-1-0.76c0.66-1.45,1.26-2.89,0.38-2.61c-0.66,0.2-1.8,0.55-2.94,0.89c-0.54-0.33-1.09-0.65-1.66-0.97
+                    C1880.94,103.41,1889.32,94.11,1891,94.11z M1819.1,117.07c-1.52,0.01-2.24-0.76-3.03-4.94s-1.38-18.03,0.78-18.03
+                    c1.68,0,10.06,9.3,13.74,13.48c-0.57,0.31-1.12,0.63-1.66,0.97c-1.14-0.34-2.28-0.69-2.94-0.89c-0.88-0.27-0.28,1.16,0.38,2.61
+                    c-0.34,0.25-0.67,0.5-1,0.76c-0.72-0.8-1.56-1.54-2.37-1.56c-1.08-0.02-0.38,1.78,0.39,3.27c-0.26,0.25-0.53,0.49-0.78,0.74
+                    c-0.01,0.01-0.03,0.03-0.04,0.04c-0.93-0.51-1.93-0.95-2.3-0.77c-0.28,0.14,0.19,1.71,0.45,2.81c-0.41,0.49-0.81,0.99-1.19,1.5
+                    C1819.4,117.07,1819.26,117.07,1819.1,117.07z M1866.93,153.63c-3.37,3.37-7.71,5.14-12.85,5.14c-6.1,0-10.28-2.25-13.17-5.14
+                    c-2.73-2.73-5.3-6.91-5.3-13.49c0-5.78,1.93-10.12,5.3-13.49c3.37-3.37,7.71-5.14,13.01-5.14c5.3,0,9.64,1.77,13.01,5.14
+                    c3.37,3.37,5.3,7.71,5.3,13.49C1872.23,145.92,1870.31,150.26,1866.93,153.63z"
+                                    />
+                                </g>
+                                <g
+                                    id="whispurr_00000165225519267736569110000000190636872348089526_"
+                                >
+                                    <path
+                                        class="boxOutline"
+                                        d="M1528.73,96.57l10.59-24.03l11.45,25.96h9.2l22.69-45.58h-16.15l-11.75,24.22l-11.55-24.83h-7.77
+                    l-11.55,24.83l-11.75-24.22H1496l23.03,46.28C1522.1,97.95,1525.35,97.07,1528.73,96.57z"
+                                    />
+                                    <path
+                                        class="boxOutline"
+                                        d="M1586.44,24h14.72v34.34c1.84-2.25,3.78-3.78,5.52-4.7c3.07-1.63,5.62-1.94,8.89-1.94
+                    c3.58,0,8.89,0.51,12.88,4.6c4.19,4.19,4.5,9.81,4.5,13.29V98.5h-14.72V75.1c0-3.17-0.1-6.85-2.45-9.09
+                    c-1.33-1.33-3.58-2.04-5.72-2.04c-3.17,0-5.01,1.43-5.82,2.25c-2.96,2.86-3.07,7.26-3.07,9.5V98.5h-14.72V24z"
+                                    />
+                                    <path
+                                        class="boxOutline"
+                                        d="M1650.2,24.92c4.8,0,8.58,3.78,8.58,8.58s-3.78,8.58-8.58,8.58c-4.8,0-8.58-3.78-8.58-8.58
+                    S1645.4,24.92,1650.2,24.92z M1657.56,52.92V98.5h-14.72V52.92H1657.56z"
+                                    />
+                                    <path
+                                        class="boxOutline"
+                                        d="M1695.37,64.57c-2.25-1.33-5.21-2.55-8.07-2.55c-1.53,0-3.27,0.41-4.19,1.33c-0.51,0.51-0.92,1.33-0.92,2.04
+                    c0,1.02,0.72,1.64,1.43,2.04c1.02,0.61,2.55,0.92,4.39,1.53l3.88,1.23c2.55,0.82,5.21,1.84,7.56,3.99
+                    c2.66,2.45,3.58,5.21,3.58,8.69c0,6.03-2.66,9.91-4.7,11.96c-4.5,4.5-10.01,5.21-14.82,5.21c-6.13,0-12.77-1.33-18.7-6.54
+                    l6.23-9.91c1.43,1.23,3.47,2.66,5.01,3.37c2.04,1.02,4.19,1.43,6.13,1.43c0.92,0,3.27,0,4.6-1.02c0.92-0.72,1.53-1.84,1.53-2.96
+                    c0-0.82-0.31-1.84-1.64-2.66c-1.02-0.61-2.35-1.02-4.5-1.63l-3.68-1.12c-2.66-0.82-5.42-2.25-7.36-4.19
+                    c-2.15-2.25-3.27-4.8-3.27-8.28c0-4.39,1.74-8.07,4.39-10.53c4.09-3.78,9.61-4.6,13.8-4.6c6.74,0,11.45,1.74,15.12,3.88
+                    L1695.37,64.57z"
+                                    />
+                                    <path
+                                        class="boxOutline"
+                                        d="M1715.74,96.08c2.87,0,5.63,0.3,8.25,0.87v-3.67c1.53,2.15,5.42,6.74,14.51,6.74
+                    c6.03,0,10.93-1.64,15.43-6.13c4.5-4.5,7.26-10.42,7.26-18.29c0-7.46-2.76-13.69-6.85-17.78c-2.86-2.86-7.97-6.44-16.15-6.44
+                    c-3.47,0-9.4,0.72-14.2,6.95v-5.42h-14.72v43.64C1711.39,96.25,1713.55,96.08,1715.74,96.08z M1726.44,67.43
+                    c1.43-1.43,4.09-3.37,8.18-3.37c2.96,0,5.82,1.12,7.97,3.17c2.04,1.94,3.47,4.91,3.47,8.28c0,2.96-1.23,6.44-3.58,8.69
+                    c-2.15,2.04-5.11,3.17-7.87,3.17c-3.17,0-6.23-1.33-8.38-3.47c-2.15-2.25-3.27-5.21-3.27-8.07
+                    C1722.96,73.05,1724.09,69.78,1726.44,67.43z"
+                                    />
+                                    <path
+                                        class="boxOutline"
+                                        d="M1782.54,52.92v25.14c0,2.04,0.2,5.21,2.55,7.36c1.02,0.92,2.86,2.15,6.13,2.15c2.76,0,4.9-0.92,6.23-2.15
+                    c2.15-2.04,2.45-5.11,2.45-7.36V52.92h14.72v26.57c0,5.21-0.51,10.12-5.11,14.61c-5.21,5.11-12.88,5.93-18.29,5.93
+                    c-5.62,0-13.18-0.82-18.39-5.93c-4.19-4.09-5.01-8.69-5.01-13.69V52.92H1782.54z"
+                                    />
+                                    <path
+                                        class="boxOutline"
+                                        d="M1838.23,96.43V80c0-3.88,0.31-8.79,3.58-12.26c1.84-1.94,4.19-3.07,7.36-3.07c2.55,0,4.7,0.61,6.64,1.64
+                    l0.82-13.8c-1.64-0.51-2.96-0.72-4.8-0.72c-2.86,0-5.42,0.41-7.87,1.94c-2.35,1.43-4.39,3.78-5.72,6.34v-7.15h-14.72v34.59
+                    C1827.1,89.11,1831.85,91.86,1838.23,96.43z"
+                                    />
+                                    <path
+                                        class="boxOutline"
+                                        d="M1867.83,97.73c2.61-1.92,4.96-3.55,7.09-4.93V80c0-3.88,0.31-8.79,3.58-12.26
+                    c1.84-1.94,4.19-3.07,7.36-3.07c2.55,0,4.7,0.61,6.64,1.64l0.82-13.8c-1.64-0.51-2.96-0.72-4.8-0.72c-2.86,0-5.42,0.41-7.87,1.94
+                    c-2.35,1.43-4.39,3.78-5.72,6.34v-7.15h-14.72v43.49C1862.8,96.69,1865.35,97.12,1867.83,97.73z"
+                                    />
+                                </g>
+                            </g>
+                        </g>
+
+                        <!-- <rect x="12" y="12" rx="36" ry="36" width="1488" height="826.5" stroke="#9484B4" fill="transparent" stroke-width="24"/> -->
+                        <!-- <path
+                    fill="#D90000"
+                    d="M60,56 c-30,0 -30,-40 0,-40 h80 c30,0 30,40 0,40z" />
+                  <g fill="#FFFFFF" stroke="black" font-size="45" font-family="Verdana">
+                    <text x="52" y="52">SVG</text>
+                  </g> -->
+                    </g>
+                </svg>
+            </div>
+            <div class="gridAreaName"></div>
+            <div class="gridAreaChat"><div class="chat-container"></div></div>
+            <div class="gridAreaCam"></div>
+            <div class="gridAreaGameName"></div>
+            <div class="gridAreaGameName nowPlayingGrid textShadow">
+                <div id="nowPlaying" class="textShadow">Now Playing</div>
+                <div id="nowPlayingName"></div>
+            </div>
+            <div class="gridAreaFooter infoGrid">
+                <div class="miscArea"></div>
+                <div id="label1Text"></div>
+                <div id="label1Value"></div>
+                <div id="label2Text">Newest Follower</div>
+                <div id="label2Value"></div>
+                <div id="label3Text">Top Sub Gifter</div>
+                <div id="label3Value"></div>
+                <div id="label4Text">Top Cheerer</div>
+                <div id="label4Value"></div>
+            </div>
+            <div class="gridAreaGamePoster">
+                <img src="" id="nowPlayingArt" class="boxShadow" />
+            </div>
+        </div>
+        <svg width="0" height="0">
+            <defs>
+                <clipPath id="bgClip">
+                    <path
+                        d="M1462,0v190c0,13.25,11.12,24,24,24s24,10.75,24,24v568c0,26.51-21.49,48-48,48H246c-13.25,0-24-10.75-24-24
+              s-10.75-24-24-24L0,806v274h1920V0H1462z"
+                    />
+                </clipPath>
+            </defs>
+        </svg>
+    </body>
 </html>
