Remvoed extraneous class from WhisTwitch\index

--- a/whispurraudio/WhisTwitch/index.html
+++ b/whispurraudio/WhisTwitch/index.html
@@ -9,7 +9,7 @@
             <div class="gridAreaBG">
                 <div class="gradient-background"></div>
             </div>
-            <div class="gridAreaOverlay snow">
+            <div class="gridAreaOverlay">
                 <svg
                     viewBox="0 0 1920 1080"
                     xmlns="http://www.w3.org/2000/svg"
