Added Kiss meter footer

--- a/whispurraudio/WhisTwitch (MixItUp)/11_GameArt.html
+++ b/whispurraudio/WhisTwitch (MixItUp)/11_GameArt.html
@@ -1,11 +1,13 @@
 <div class="parent">
-    <img
-        src="https://static-cdn.jtvnw.net/ttv-boxart/$streamgame-136x190.jpg"
-        id="nowPlayingArt"
-        class="gridAreaGamePoster boxShadow"
-        width="170.344"
-        height="238"
-    />
+    <div class="gridAreaGamePoster">
+        <img
+            src="https://static-cdn.jtvnw.net/ttv-boxart/$streamgame-136x190.jpg"
+            id="nowPlayingArt"
+            class="boxShadow"
+            width="170.344"
+            height="238"
+        />
+    </div>
 
     <div class="gridAreaGameName">
         <div class="nowPlayingGrid">
