--- a/whispurraudio/WhisTwitch (MixItUp)/00_style.html
+++ b/whispurraudio/WhisTwitch (MixItUp)/00_style.html
@@ -12,6 +12,13 @@
         font-size: 30px;
         text-shadow: 0px 0px 5px rgb(59, 60, 152), 0px 0px 10px rgb(59, 60, 152);
     }
+
+    hr {
+        border: 1px solid #fff;
+        margin: 0;
+        box-shadow: 0px 0px 5px rgb(59, 60, 152), 0px 0px 10px rgb(59, 60, 152);
+    }
+
     .gradient-background {
         background: linear-gradient(315deg, #2f23ac, #7d35a5, #e54c9c);
         background-size: 180% 180%;
@@ -67,6 +74,8 @@
 
     .gridAreaFooter {
         grid-area: 5 / 3 / span 1 / span 1;
+        margin-bottom: 12px;
+        margin-top: 12px;
         /* background: red; */
     }
 
@@ -155,27 +164,45 @@
         grid-area: 1 / 1 / 6 / 2;
     }
 
-    /* .slideshow-container {
-        max-width: 100%;
-        position: relative;
-        margin: auto;
-    } */
-
-    .mySlides {
-        display: none;
+    .footerGrid {
+        display: grid;
+        grid-auto-columns: 1fr;
+        grid-template-rows: 60px min-content 1fr;
+        grid-row-gap: 12px;
+        text-transform: lowercase;
+        height:100%;
     }
 
-    .fade {
-        animation-name: fade;
-        animation-duration: 1.5s;
+    .footerGrid hr {
+        grid-row: 2;
     }
 
-    @keyframes fade {
-        from {
-            opacity: 0.4;
-        }
-        to {
-            opacity: 1;
-        }
+    .footerTitleBar {
+        display: flex;
+        justify-content: space-between;
+        align-content: flex-end;
+    }
+
+    .footerTitle {
+        font-weight: 700;
+        font-size: 54px;
+        white-space: left;
+    }
+
+    .footerSubtitle {
+        font-weight: normal;
+        font-size: 32;
+        text-align: right;
+    }
+
+    .footerTitle,
+    .footerSubtitle {
+        grid-row: 1;
+    }
+
+    .footerContent {
+        grid-row: 3;
+        justify-content: center;
+        align-content: center;
     }
 </style>
