--- a/whispurraudio/WhisTwitch (MixItUp)/12_FooterText_Kisses.html
+++ b/whispurraudio/WhisTwitch (MixItUp)/12_FooterText_Kisses.html
@@ -1,5 +1,157 @@
+<style>
+    .scorebar-background {
+        color: #fff !important;
+        background-color: rgba(0, 0, 0, 0) !important;
+        background-blend-mode: multiply;
+        width: 100%;
+        display: flex;
+        height: 65%;
+    }
+
+    .scorebar-round-small {
+        border-radius: 2px;
+    }
+    .scorebar-round,
+    .scorebar-round-medium {
+        border-radius: 4px;
+    }
+    .scorebar-round-left,
+    .scorebar-round-medium-left {
+        border-top-left-radius: 4px;
+        border-bottom-left-radius: 4px;
+    }
+    .scorebar-round-right,
+    .scorebar-round-medium-right {
+        border-top-right-radius: 4px;
+        border-bottom-right-radius: 4px;
+    }
+    .scorebar-round-large {
+        border-radius: 8px;
+    }
+    .scorebar-round-xlarge {
+        border-radius: 16px;
+    }
+    .scorebar-round-xlarge-left {
+        border-top-left-radius: 16px;
+        border-bottom-left-radius: 16px;
+    }
+    .scorebar-round-xlarge-right {
+        border-top-right-radius: 16px;
+        border-bottom-right-radius: 16px;
+    }
+    .scorebar-round-xxlarge-left {
+        border-top-left-radius: 32px;
+        border-bottom-left-radius: 32px;
+    }
+    .scorebar-round-xxlarge-right {
+        border-top-right-radius: 32px;
+        border-bottom-right-radius: 32px;
+    }
+
+    .scorebar-fill {
+        color: #7d35a5 !important;
+        background-color: #fff !important;
+        padding: 0.01em 16px;
+        margin: 6px;
+        display: flex;
+        align-content: center;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
+    .scorebar-fillText {
+        font-size: 42px;
+        text-shadow: none;
+        font-weight: 600;
+        text-transform: lowercase;
+        overflow: clip;
+        white-space: nowrap;
+        text-align: center;
+    }
+
+    .kissesScores {
+        display: grid;
+        grid-template-columns: 100px 1fr 100px;
+        grid-column-gap: 12px;
+        justify-content: center;
+        height: 100%;
+    }
+
+    .kissesScoresLabel {
+        font-size: 32px;
+        font-weight: 600;
+        text-transform: lowercase;
+        text-align: center;
+        z-index: 1;
+        top: -80%;
+        position: relative;
+    }
+
+    .kissesScoresBars {
+        grid-column: 2;
+        display: flex;
+        flex-wrap: wrap;
+        align-content: center;
+    }
+
+    .kissesScoresLenny {
+        width: calc(100% * $lennykisses / ($lennykisses + $fantakisses));
+        /* max-width: calc(100% * $lennykisses / $maxkisses); */
+    }
+
+    .kissesScoresFanta {
+        width: calc(100% * $fantakisses / ($lennykisses + $fantakisses));
+        /* max-width: calc(100% * $fantakisses / $maxkisses); */
+    }
+
+    .kissesScoresLabelImage {
+        height: 100px;
+        object-fit: scale-down;
+        z-index: 0;
+    }
+</style>
 <div class="parent">
     <div class="gridAreaFooter">
-
+        <div class="footerGrid">
+            <div class="footerTitleBar">
+                <div class="footerTitle">Kitty Kisses</div>
+                <div class="footerSubtitle">
+                    Redeem kisses for the<br />boys using Whiscoins!
+                </div>
+            </div>
+            <hr />
+            <div class="footerContent kissesScores">
+                <div style="height: 104px">
+                    <img
+                        src="https://whispurraudio.github.io/whispurraudio/WhisTwitch%20%28MixItUp%29/LennyHead.png"
+                        class="kissesScoresLabelImage"
+                    />
+                    <div class="kissesScoresLabel">lenny</div>
+                </div>
+                <div class="kissesScoresBars">
+                    <div
+                        class="scorebar-background scorebar-round-xxlarge-left scorebar-round-xxlarge-right"
+                    >
+                        <div
+                            class="scorebar-fill scorebar-round-xxlarge-left scorebar-round-right kissesScoresLenny"
+                        >
+                            <div class="scorebar-fillText">$lennykisses 💋</div>
+                        </div>
+                        <div
+                            class="scorebar-fill scorebar-round-xxlarge-right scorebar-round-left kissesScoresFanta"
+                        >
+                            <div class="scorebar-fillText">$fantakisses 💋</div>
+                        </div>
+                    </div>
+                </div>
+                <div style="height: 104px">
+                    <img
+                        src="https://whispurraudio.github.io/whispurraudio/WhisTwitch%20%28MixItUp%29/FantaHead.png"
+                        class="kissesScoresLabelImage"
+                    />
+                    <div class="kissesScoresLabel">fanta</div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
