--- a/whispurraudio/WhisTwitch (MixItUp)/11_FooterText_Kisses.html
+++ b/whispurraudio/WhisTwitch (MixItUp)/11_FooterText_Kisses.html
@@ -83,7 +83,7 @@
         text-transform: lowercase;
         text-align: center;
         z-index: 1;
-        top: -80%;
+        top: -85%;
         position: relative;
     }
 
@@ -124,7 +124,7 @@
                 <div style="height: 104px">
                     <img
                         src="https://whispurraudio.github.io/whispurraudio/WhisTwitch%20%28MixItUp%29/LennyHead.png"
-                        class="kissesScoresLabelImage"
+                        class="kissesScoresLabelImage imageShadow"
                     />
                     <div class="kissesScoresLabel">lenny</div>
                 </div>
@@ -133,12 +133,12 @@
                         class="scorebar-background scorebar-round-xxlarge-left scorebar-round-xxlarge-right"
                     >
                         <div
-                            class="scorebar-fill scorebar-round-xxlarge-left scorebar-round-right kissesScoresLenny"
+                            class="boxShadow scorebar-fill scorebar-round-xxlarge-left scorebar-round-right kissesScoresLenny"
                         >
                             <div class="scorebar-fillText">$lennykisses 💋</div>
                         </div>
                         <div
-                            class="scorebar-fill scorebar-round-xxlarge-right scorebar-round-left kissesScoresFanta"
+                            class="boxShadow scorebar-fill scorebar-round-xxlarge-right scorebar-round-left kissesScoresFanta"
                         >
                             <div class="scorebar-fillText">$fantakisses 💋</div>
                         </div>
@@ -147,7 +147,7 @@
                 <div style="height: 104px">
                     <img
                         src="https://whispurraudio.github.io/whispurraudio/WhisTwitch%20%28MixItUp%29/FantaHead.png"
-                        class="kissesScoresLabelImage"
+                        class="kissesScoresLabelImage imageShadow"
                     />
                     <div class="kissesScoresLabel">fanta</div>
                 </div>
