--- a/whispurraudio/WhisTwitch (MixItUp)/99_BackgroundOutline.html
+++ b/whispurraudio/WhisTwitch (MixItUp)/99_BackgroundOutline.html
@@ -58,8 +58,8 @@
                         dx="0"
                         dy="0"
                         stdDeviation="5"
-                        flood-opacity="0.75"
-                        flood-color="#3B3C98"
+                        flood-opacity="0.25"
+                        flood-color="#000"
                         result="dropShadow"
                     />
 
@@ -82,7 +82,7 @@
                 <path
                     class="boxOutline"
                     d="M1920,682h-315.91c-32.03,0-58.09-25.84-58.09-57.6V259.6c0-31.76,26.06-57.6,58.09-57.6H1920v24h-315.91
-	c-18.8,0-34.09,15.07-34.09,33.6v364.8c0,18.53,15.29,33.6,34.09,33.6H1920V682z"
+ c-18.8,0-34.09,15.07-34.09,33.6v364.8c0,18.53,15.29,33.6,34.09,33.6H1920V682z"
                 />
                 <g
                     id="Fill_00000165933788593770885490000003400979893000528550_"
